# 13-3DUnification

./: CMakeLists.txt  README.md
cmake/: FindEigen.cmake  FindMKL.cmake  FindSFML.cmake
examples/: CMakeLists.txt
examples/3dofddp/: 3dof.cpp  3dof.urdf  CMakeLists.txt  krang3d.h  krang3dwindow.cpp  krangddp.h  main.cpp  plotScript.m
examples/3dofddp_original/: 3dof.cpp  CMakeLists.txt  defaultInit.txt  krang3d.cpp  krang3dwindow.h  krangddp.h  overwriteInitPose.txt  plotScript.m  plotScript.m~
examples/autorally/: CMakeLists.txt  THETA.txt  autorally_bfm.h  autorally_costs.h  autorallyrt.cpp  autorallyrt.h  autorallyrtwindow.cpp  autorallyrtwindow.h  autorallyrtwindow.ui
examples/invpendulum/: invpendulum.cpp  invpendulum.h  invpendulumwindow.cpp  invpendulumwindow.h  invpendulumwindow.ui
examples/krang3d/: CMakeLists.txt  krang3d.cpp  krang3d.h
examples/quadrotor/: CMakeLists.txt  quadrotor.cpp  quadrotor.h  quadrotor_costs.h  quadrotor_plant.h  quadrotorwindow.cpp  quadrotorwindow.h  quadrotorwindow.ui
include/ddp/: boxqp.hpp  costs.hpp  ddp.hpp  dynamics.hpp  mpc.hpp  plant.hpp
